test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/postfix_in_ternary.plx
pub fn main(none) i32 {
    x: i32 = 10
    ? x - 10 then 0 else x--
    return x
}
