test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/plx1_label_without_id.plx
pub fn main(none) i32 {
    jump lbl
    label
    return 0
}
